# BorchShell

./: .gitignore  CMakeLists.txt  borchShell  borchShell.c
include/: parser.h
src/: main.c  parser.c
test/: test_parser.c
